--- a/inscription.css
+++ b/inscription.css
@@ -1,83 +1,79 @@
 body
 {
-    background-color: #fbfbfb;
-}
-.acu
-{
-    display:flex;
-}
-.menuinscription
-{
-    display : flex;
-    align-items: center;
-    justify-content: center;
-    position :absolute;
-    flex-direction : column;
-    left : 20%;
-    margin : auto ;
-    width : 60%;
-    justify-content: space-between;
-    font-size : 1.1em;
+    background-color: #fdf257;
+    text-align :center;
     
 }
-
-.nom,.couriel,.motdepasse,.confirmemdp
+a{
+    text-decoration : none;
+}
+.accueil
 {
-    display : flex;
+    display:flex;
+    position: absolute;
+    width : 100%;
+    top : 2%;
+    justify-content: center;
+    font-size : 1.9rem;
+}
+.menu
+{
+    display:flex;
+    position: absolute;
     align-items: center;
     flex-direction: column;
-    position :relative;
     justify-content: center;
-    width: 100%;
-    right : 1%;
-    height : 50px;
+    width : 78%;
+    left : 11%;
+    top : 10%;
+    font-size:1.2em;
+}
+
+input
+{
+    justify-content: center;
+    font-size : 1.1rem;
+    width: 600px;
+    height : 60px;
     margin : 10px;
-    padding : auto;
-    border : solid rgb(245, 226, 202);
-    border-radius: 1px;
+    border: 2mm ridge rgba(50, 61, 220, 0.6);
+}
+input:hover
+{
+    background-color : rgb(169, 169, 255);
+}
+.checkbox
+{
+    background-color : rgb(183, 255, 169);
+    width : 30px;
+    height : 30px;
+
+}
+.checkbox:hover
+{
+    background-color : rgb(200, 200, 255);
+    
 }
 
 .accord
 {
     display : flex;
     align-items: center;
-    flex-direction: column;
     position :relative;
     width: 70%;
-    height : 70px;
-    margin : 10px;
+    left: 15%;
+    height : 60px;
+    margin : 1px;
     padding : auto;
-    border : solid rgb(0, 0, 0);
+    border: 2mm ridge rgba(50, 61, 220, 0.6);
 }
 
-.soumettre
-{
-    display : flex;
-    position :absolute;
-    justify-content: center;
-    right : 45%;
-    top : 620px;
-    width: 110px;
-    height : 20px;
-    margin : 10px;
-    padding : auto;
-    border : solid rgb(0, 0, 0);
-}
-.recuperation
-{
-    display : flex;
-    position :absolute;
-    left : 30%;
-    top : 680px;
-    width: 510px;
-    height : 20px;
-    border : solid rgb(0, 0, 0);
-}
+
 .pubg
 {
     display : flex;
     position : absolute;
-    width : 14%;
+    width : 10%;
     left : 0%;
     height : 600px ;
     top : 5% ;
@@ -88,7 +84,7 @@ body
 {
     display : flex;
     position : absolute;
-    width : 14%;
+    width : 10%;
     right : 0%;
     height : 600px ;
     top : 5% ;
