--- a/index2.css
+++ b/index2.css
@@ -1,10 +1,9 @@
+
 html, body{
-    
+    background-color: #ffffff;
     padding: 0;
     margin :0;
     box-sizing : border-box;
-    background-image: url(image/fond1.jpg);
-    
 }
 
 a{
@@ -12,7 +11,7 @@ a{
 }
 .header
 {
-    
+
 }
 
 .connexion
@@ -20,53 +19,43 @@ a{
     display :flex ;
     position :absolute;
     width: 15%;
-    
+    height: 1%;
     margin : auto;
     top :20px ;
     left : 3%;
     justify-content : center;
     font-size : 1.3em;
+    background-color: #ffffff;
     cursor : pointer;
-    background-color : rgb(255, 255, 255);
-opacity : 1;
-visibility : visible;
 }
 
 .inscription
 {
     display :flex ;
     width: 15%;
-   
-    background-color : white;
+    height: 1%;
     margin : auto;
     position :absolute;
     top :70px ;
     left : 3%;
     justify-content : center;
     font-size : 1.3em;
-    
-opacity : 1;
-visibility : visible;
+    background-color: #ffffff;
     
 }
 
 .menu
 {
     display :flex ;
+    position :absolute;
     justify-content:space-between;
     width: 30%;
-    height: 25px;
-    border : solid white;
-    background-color: rgb(255, 255, 255);
-    border-radius: 5px;
-    padding : 10px;
-    position :absolute;
+    height: 1%;
+    margin : auto;
     top :20px ;
     left : 30%;
     font-size : 1.3em;
-    opacity : 1;
-visibility : visible;
-   
+    background-color: #ffffff;
 }
 
 .ecrit
@@ -76,9 +65,7 @@ visibility : visible;
     left : 0%;
     justify-content:space-between;
     flex-direction : column ;
-    opacity : 1;
-visibility : visible;
-    
+    background-color: #ffffff;
 }
 
 .presentation
@@ -93,11 +80,7 @@ visibility : visible;
     text-align: center;
     font-size : 1.6em;
     font-style : italic;
-    color  :#180090;
-    
-opacity : 1;
-visibility : visible;
-    
+    color  :#2a00fa;
 }
 
 .principe
@@ -115,10 +98,6 @@ visibility : visible;
     font-style : italic;
     font-weight: bold;
     color : #0c472d;
-    
-opacity : 1;
-visibility : visible;
-    
 }
 .titrepanier
 {
@@ -127,17 +106,12 @@ visibility : visible;
     top :0;
     left : 42% ;
     font-size : 1.2em;
-    
-    margin : 5px;
-    opacity : 1;
-visibility : visible;
+    border : solid rgb(243, 236, 168);
 }
 .panier1,.panier2,.panier3
 {
     display : flex;
     align-items: center ;
-    opacity : 1;
-visibility : visible;
     
 }
 
@@ -145,16 +119,15 @@ visibility : visible;
 {
     display : flex;
     position : absolute;
-    top :630px ;
+    
+    top :555px ;
     font-size : 1.2em;
     flex-direction : wrap;
     justify-content: space-between;
     margin :auto;
     height : 240px;
     width:80%;
-    
-    opacity : 1;
-visibility : visible;
+    border : solid black;
     
 }
 
@@ -171,38 +144,32 @@ visibility : visible;
     left : 65%;
     font-size : 1.1em;
     background-color :khaki;
-    
 }
 
 footer
 {
 display : flex ;
-position : absolute;
-top : 900px ;
+
+top : 250px ;
 width :50% ;
 height: 50px;
 font-size : 1.2em;
 border : solid maroon;
 align-items: center;
 justify-content:center;
-
-opacity : 1;
-visibility : visible;
-
 }
 
 .pagett
 {
     display:flex;
     justify-content: center;
-    
 }
 
 .barreseparation
 {display : flex;
     width : 1px;
     height : 1px;
-    border-top:solid rgb(255, 255, 255);
+    border-top:solid white;
 }
 
 .message
@@ -210,12 +177,14 @@ visibility : visible;
     display : flex;
     position : absolute;
     width : 300px;
-    opacity : 0 ;
-    visibility : hidden ;
+    background-color :rgb(255, 255, 255);
+    opacity :0 ;
+    visibility: hidden;
 }
-.app .message
+.app .message 
 {
-    display  : flex;
-    opacity : 1 ;
+    display : flex;
+    opacity : 1;
     visibility : visible;
+
 }
