--- a/panier.css
+++ b/panier.css
@@ -2,6 +2,7 @@
 {
     display : flex;
     flex-direction : row;
+    
 }
 .retour
 {
@@ -10,16 +11,10 @@ position : relative;
 left : 1%;
 
 }
-.choixabonnement
-{
-    display : flex;
-    position : absolute;
-    top : 80%;
-    left : 5%;
-}
+
 html,body
 {
-    background-color:#fffff3;
+    background-color:#ffffff;
 }
 
 .colonne1
@@ -31,8 +26,14 @@ html,body
     height : 500px;
     position :absolute;
     left : 1%;
-    font-size : 1.1em;
+    font-size : 1.2em;
     width : 25%;
+    background-color :rgb(255, 255, 255);
+}
+.colonne11
+{
+display : none;
+
 }
 .colonne2
 {
@@ -40,12 +41,16 @@ html,body
     align-items: center;
     justify-content : space-between;
     flex-direction: column;
-    height : 500px;
+    height : 550px;
     position :absolute;
     left : 18%;
     top :40px;
-    font-size : 1.1em;
+    font-size : 1.2em;
     width : 25%;
+}
+.formcolonne2
+{
+    display : 
 }
 .colonne3
 {
@@ -57,34 +62,67 @@ html,body
     position :absolute;
     left :45%;
     top : 10px ;
-    font-size : 1.2em;
+    font-size : 1.3em;
     width : 35%;
 }
 .imgpanier1,.imgpanier2,.imgpanier3
 {
     width: 500px;
-}
-.colonne4
-{
-    display : flex;
-    position : absolute;
-    left : 75%;
-    top : 40px;
-    width: auto;
-    height : 460px;
-    flex-direction: column;
-    font-size : 1.3em;
-    justify-content : space-between;
+    font-size : 1rem;
     
 }
+
 
 .choixabonnement
 {
     display:flex;
-    position :absolute;
-    top : 580px;
-    left :10%;
+    position : absolute;
+    top : 700px;
+left : 20%;
+text-align :center;
 }
+
+
+.totalpanier
+{
+    display : flex;
+    position : absolute;
+    top : 560px;
+    width : 600px;
+    border : double green;
+    padding : 10px;
+    font-size: 1.2rem; 
+    background-color:rgb(255, 255, 255);
+}
+
+.nombrepanier1
+{
+    display : flex;
+    position : absolute;
+    top : 100px;
+}
+.nombrepanier2
+{
+    display : flex;
+    position : absolute;
+    top : 270px;
+}
+.nombrepanier3
+{
+    display : flex;
+    position : absolute;
+    top : 410px;
+}
+
+.nombrepanier
+
+{
+    display : flex;
+    position : absolute;
+    left :100px;
+    align-items: center ;
+}
+
 .pub
 {
     display : flex;
